--- a/Front End/HuyNQ/Source/index.html
+++ b/Front End/HuyNQ/Source/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BootStrap 4</title>
+    <title>Home</title>
     <link rel="shortcut icon" href="https://cdn.worldvectorlogo.com/logos/bootstrap-4.svg" type="image/x-icon">
     <link rel="stylesheet" href="plugin/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="plugin/fontawesome/css/all.min.css">
@@ -170,13 +170,13 @@
     <div class="col col-12 col-lg-6 col-md-12 col-sm-12 mb-1 ">
       <div class="card card-jobs-uv">
         <div class="logo-doanh_nghiep">
-          <img class="card-img-top" src="https://static.wixstatic.com/media/9d8ed5_847c5475fe8c43f899c98fea24fd4ca1~mv2.png/v1/fit/w_500,h_500,q_90/file.png" alt="Card image cap">
+          <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/FPT_Polytechnic.png/1200px-FPT_Polytechnic.png" alt="Card image cap">
         </div>
           <div class="card-body card-body--uv">
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p class=""><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu <i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -190,7 +190,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -204,7 +204,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -220,7 +220,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -234,7 +234,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -247,7 +247,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -273,7 +273,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -287,7 +287,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -301,7 +301,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -317,7 +317,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -331,7 +331,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
@@ -344,7 +344,7 @@
             <a href="">Nhân Viên Kinh Doanh Lĩnh Vực Thức Ăn Thủy Sản</a>
             <br>
             <a href="">Công Ty TNHH Công Nghệ Cao 3D Việt Nam </a>
-            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> Hồ Chí Minh   </p>
+            <p><i class="fas fa-dollar-sign"></i> 15 triệu - 20 triệu<i class="fas fa-map-marker-alt ml-5"></i> Hồ Chí Minh   </p>
         </div>
       </div>
     </div>
