--- a/Front End/HuyNQ/Source/index.html
+++ b/Front End/HuyNQ/Source/index.html
@@ -87,9 +87,29 @@
   <div class="col-md-12 text-center mt-5 mb-5 title-catalog-top">
     <h3><i class="fas fa-city"></i> TOP NGÀNH NGHỀ PHỔ BIẾN</h3>
   </div>
-
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
     <div class="container container-catalog--top">
-   <div class="card promoting-card mr-3">
+      <div class="card promoting-card mr-3">
       <div class="card-body d-flex">
         <img src="images/catalog.png" class="rounded-circle mr-3"  alt="avatar">
         <div>
@@ -681,6 +701,16 @@
   
   <!-- Huy -->
 </body>
+<script>
+  $(document).ready(function(){
+
+$('.items').slick({
+infinite: true,
+slidesToShow: 4,
+slidesToScroll: 4
+});
+});
+</script>
 </html>
 
 <script src="plugin/bootstrap/js/bootstrap.bundle.min.js"></script>
