Animation loading admin

--- a/Project-TimViecLam/public/employer/index.html
+++ b/Project-TimViecLam/public/employer/index.html
@@ -8,15 +8,16 @@
         <meta content="Royal Team" name="author">
 
         <link rel="shortcut icon" href="../favicon.ico">
-
         <!-- BootStrap 4 -->
         <link href="plugin/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="assets\css\icons.min.css" rel="stylesheet" type="text/css">
 
         <!-- CSS -->
         <link href="assets\css\app.min.css" rel="stylesheet" type="text/css">
         <link href="assets\css\custom.min.css" rel="stylesheet" type="text/css">
-
+        <link href="assets\css\style.css" rel="stylesheet" type="text/css">
+        
+        <!-- Boxicons -->
+        <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body data-sidebar="dark">
         <div id="layout-wrapper">
@@ -35,7 +36,7 @@
                             </a>
                         </div>
                         <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
-                            <i class="fa fa-fw fa-bars"></i>
+                            <i class="bx bxs-dock-left font-weight-bold"></i>
                         </button>
 
                     </div>
@@ -258,6 +259,18 @@
             <!-- Start right Content here -->
             <!-- ============================================================== -->
             <div class="main-content">
+                <div id="preloader">
+                    <div id="status">
+                        <div class="spinner-chase">
+                            <img src="../images/logo/favicon.png" id="preloader-logo__spinder" alt="Logo" height="30">
+                            <div class="chase-dot"></div>
+                            <div class="chase-dot"></div>
+                            <div class="chase-dot"></div>
+                            <div class="chase-dot"></div>
+                            <div class="chase-dot"></div>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="page-content">
                     <div class="container-fluid">
