--- a/Front End/HuyNQ/Source/index.html
+++ b/Front End/HuyNQ/Source/index.html
@@ -29,7 +29,7 @@
             </li>
             
             <li>
-                <a href="#" class="menu-button--ntd">Nhà tuyển dụng</a>
+                <a href="home-ntd.html" class="menu-button--ntd">Nhà tuyển dụng</a>
             </li>
         </ul>
     </nav>
