--- a/Front End/HuyNQ/Source/security.html
+++ b/Front End/HuyNQ/Source/security.html
@@ -88,18 +88,18 @@
         <h5>Quy định bảo mật</h5>
     </div>
     <hr>
-    <p>MyWork tôn trọng những thông tin cá nhân của bạn. Xin hãy đọc và tìm hiểu về những Thỏa thuận sử dụng và quy định bảo mật thông tin sau đây của chúng tôi. Việc bạn truy cập, đăng ký, sử dụng trên website MyWork có nghĩa rằng bạn đồng ý và chấp nhận ràng buộc bởi các điều khoản của bản quy định bảo mật của chúng tôi.
+    <p>Timvieclam.xyz tôn trọng những thông tin cá nhân của bạn. Xin hãy đọc và tìm hiểu về những Thỏa thuận sử dụng và quy định bảo mật thông tin sau đây của chúng tôi. Việc bạn truy cập, đăng ký, sử dụng trên website Timvieclam.xyz có nghĩa rằng bạn đồng ý và chấp nhận ràng buộc bởi các điều khoản của bản quy định bảo mật của chúng tôi.
     </p>
     <h5>I. Mật khẩu và bảo mật</h5>
-        <p>Khi bạn đăng ký sử dụng trang web MyWork, bạn sẽ được yêu cầu khởi tạo tài khoản có mật khẩu. Chúng tôi khuyến nghị bạn giữ mật khẩu này bảo mật và không được tiết lộ hoặc chia sẻ với bất kỳ ai. Nếu bạn biết hoặc nghi ngờ người khác biết mật khẩu của bạn, bạn nên thông báo với chúng tôi ngay lập tức bằng cách liên hệ với chúng tôi tới số hotline 0246 2939998</p>
-        <p>Khi MyWork phát hiện bạn có hành vi vi phạm bảo mật hoặc sử dụng không đúng mục đích trang web MyWork, chúng tôi có thể yêu cầu bạn thay đổi mật khẩu hoặc chúng tôi có thể khóa tài khoản của bạn.</p>
+        <p>Khi bạn đăng ký sử dụng trang web Timvieclam.xyz, bạn sẽ được yêu cầu khởi tạo tài khoản có mật khẩu. Chúng tôi khuyến nghị bạn giữ mật khẩu này bảo mật và không được tiết lộ hoặc chia sẻ với bất kỳ ai. Nếu bạn biết hoặc nghi ngờ người khác biết mật khẩu của bạn, bạn nên thông báo với chúng tôi ngay lập tức bằng cách liên hệ với chúng tôi tới số hotline 098 957 1152</p>
+        <p>Khi Timvieclam.xyz phát hiện bạn có hành vi vi phạm bảo mật hoặc sử dụng không đúng mục đích trang web Timvieclam.xyz, chúng tôi có thể yêu cầu bạn thay đổi mật khẩu hoặc chúng tôi có thể khóa tài khoản của bạn.</p>
         <p>Khi bạn tự nguyện tiết lộ thông tin cá nhân của bạn trực tuyến, thông tin đó có thể bị người khác thu thập và sử dụng.</p>
-        <p>Trường hợp bạn mất mật khẩu hoặc hoặc sử dụng không đúng mục đích trang web MyWork, bạn phải chịu tất cả sự mất mát hoặc thiệt hại phát sinh và chịu trách nhiệm sẽ bồi thường hoàn toàn cho MyWork trong trường hợp MyWork có xảy ra mất mát hoặc thiệt hại.</p>
-        <p>Đáng tiếc là không có dữ liệu nào truyền trên Internet có thể bảo đảm an toàn 100%. Do vậy, mặc dù chúng tôi cố gắng hết sức bảo vệ thông tin cá nhân của bạn, Website mywork.com.vn có thể không thể bảo đảm hoặc cam kết về tính an toàn của thông tin bất kỳ mà bạn chuyển tới chúng tôi hoặc từ dịch vụ trực tuyến của chúng tôi, và bạn phải tự chịu rủi ro. Ngay khi chúng tôi nhận được thông tin bạn gửi tới, chúng tôi sẽ cố gắng hết sức để bảo đảm an toàn trên hệ thống của chúng tôi.</p>
+        <p>Trường hợp bạn mất mật khẩu hoặc hoặc sử dụng không đúng mục đích trang web Timvieclam.xyz, bạn phải chịu tất cả sự mất mát hoặc thiệt hại phát sinh và chịu trách nhiệm sẽ bồi thường hoàn toàn cho Timvieclam.xyz trong trường hợp Timvieclam.xyz có xảy ra mất mát hoặc thiệt hại.</p>
+        <p>Đáng tiếc là không có dữ liệu nào truyền trên Internet có thể bảo đảm an toàn 100%. Do vậy, mặc dù chúng tôi cố gắng hết sức bảo vệ thông tin cá nhân của bạn, Website Timvieclam.xyz.com.vn có thể không thể bảo đảm hoặc cam kết về tính an toàn của thông tin bất kỳ mà bạn chuyển tới chúng tôi hoặc từ dịch vụ trực tuyến của chúng tôi, và bạn phải tự chịu rủi ro. Ngay khi chúng tôi nhận được thông tin bạn gửi tới, chúng tôi sẽ cố gắng hết sức để bảo đảm an toàn trên hệ thống của chúng tôi.</p>
 
 
     <h5>II. Thông tin và dữ liệu người sử dụng</h5>
-        <p>Bằng việc cung cấp thông tin hoặc sử dụng dịch vụ tại trang web MyWork, bạn đồng ý để MyWork, các công ty liên kết, đơn vị trực thuộc và các thành viên trực thuộc Công ty Cổ phần My Work có thể sử dụng thông tin của bạn, dù đó là thông tin cá nhân, nhân khẩu học, đều nhằm mục đích điều hành và cải tiến Website MyWork, tăng cường tiện ích cho người sử dụng hoặc giới thiệu và phân phối các sản phẩm và dịch vụ của chúng tôi.
+        <p>Bằng việc cung cấp thông tin hoặc sử dụng dịch vụ tại trang web Timvieclam.xyz, bạn đồng ý để Timvieclam.xyz, các công ty liên kết, đơn vị trực thuộc và các thành viên trực thuộc Công ty Cổ phần My Work có thể sử dụng thông tin của bạn, dù đó là thông tin cá nhân, nhân khẩu học, đều nhằm mục đích điều hành và cải tiến Website Timvieclam.xyz, tăng cường tiện ích cho người sử dụng hoặc giới thiệu và phân phối các sản phẩm và dịch vụ của chúng tôi.
         </p>
         <p>Thông tin chúng tôi có về bạn thông qua quá trình bạn đăng ký hoặc sử dụng Cookies để lưu và theo dõi thông tin về bạn trong quá trình sử dụng dịch vụ.
         </p>
@@ -110,21 +110,21 @@
         </p>
         <p>c. Cho phép bạn “kiểm tra danh sách” các công việc mà bạn muốn đánh dấu để giữ lại và xem sau này.)
         </p>
-        <p>Chúng tôi có thể dùng thông tin liên lạc của bạn để gửi cho bạn email hoặc các thông báo khác về những cập nhật tại website tuyển dụng của MyWork.com.vn. Nội dung và tần suất của những thông báo này sẽ thay đổi tuỳ thuộc vào thông tin mà chúng tôi có về bạn.
+        <p>Chúng tôi có thể dùng thông tin liên lạc của bạn để gửi cho bạn email hoặc các thông báo khác về những cập nhật tại website tuyển dụng của Timvieclam.xyz.com.vn. Nội dung và tần suất của những thông báo này sẽ thay đổi tuỳ thuộc vào thông tin mà chúng tôi có về bạn.
         </p>
-        <p>Chúng tôi có thể dùng thông tin thu thập được để thông báo cho bạn về những sản phẩm và dịch vụ do Website mywork.com.vn hay các công ty đối tác cung cấp, hoặc để xin ý kiến của bạn về các sản phẩm và dịch vụ hiện tại hay những sản phẩm và dịch vụ tiềm năng mới.
+        <p>Chúng tôi có thể dùng thông tin thu thập được để thông báo cho bạn về những sản phẩm và dịch vụ do Website Timvieclam.xyz.com.vn hay các công ty đối tác cung cấp, hoặc để xin ý kiến của bạn về các sản phẩm và dịch vụ hiện tại hay những sản phẩm và dịch vụ tiềm năng mới.
         </p>
         <p>Chúng tôi có thể tiết lộ thông tin nếu có yêu cầu pháp lý, hay từ một cơ quan chính phủ hoặc nếu chúng tôi tin rằng hành động đó là cần thiết nhằm: (a) tuân theo các yêu cầu pháp lý hoặc chiếu theo quy trình của luật pháp; (b) bảo vệ các quyền hay tài sản của Công ty Cổ phần My Work, hoặc các công ty đối tác; (c) ngăn chặn tội phạm hoặc bảo vệ an ninh quốc gia; hoặc (d) bảo vệ an toàn cá nhân của những người sử dụng hay công chúng.
         </p>
-        <p>Chúng tôi có thể dùng tên bạn, tên hay logo của công ty bạn, hay thông tin khác về hoặc từ các quảng cáo tuyển dụng hoặc tài khoản xem hồ sơ ứng viên của bạn cho bất kỳ hay tất cả các mục đích tiếp thị của Công ty Cổ phần My Work. Ví dụ, các tên hay logo công ty có thể được dùng trong quảng cáo trên báo, thư gửi trực tiếp, phương tiện bán hàng, áp phích quảng cáo và các tài liệu khác liên quan đến Website MyWork hay các tài sản khác của Công ty Cổ phần My Work.
+        <p>Chúng tôi có thể dùng tên bạn, tên hay logo của công ty bạn, hay thông tin khác về hoặc từ các quảng cáo tuyển dụng hoặc tài khoản xem hồ sơ ứng viên của bạn cho bất kỳ hay tất cả các mục đích tiếp thị của Công ty Cổ phần My Work. Ví dụ, các tên hay logo công ty có thể được dùng trong quảng cáo trên báo, thư gửi trực tiếp, phương tiện bán hàng, áp phích quảng cáo và các tài liệu khác liên quan đến Website Timvieclam.xyz hay các tài sản khác của Công ty Cổ phần My Work.
         </p>
-        <p>Để là cầu nối giữa Nhà tuyển dụng và Người tìm việc, hồ sơ của Người tìm việc và Thông tin tuyển dụng của Nhà tuyển dụng được hiển thị trên website MyWork. Chúng tôi không chịu trách nhiệm nếu một bên thứ 3 cố tình lấy thông tin của người dùng bất hợp pháp mà chưa được sự cho phép của chúng tôi. Bên thứ 3 sẽ phải chịu hoàn toàn trách nhiệm trước pháp luật nếu vi phạm quyền sở hữu trí tuệ và xâm phạm tài sản của chúng tôi (bao gồm tất cả các nội dung trên website MyWork).
+        <p>Để là cầu nối giữa Nhà tuyển dụng và Người tìm việc, hồ sơ của Người tìm việc và Thông tin tuyển dụng của Nhà tuyển dụng được hiển thị trên website Timvieclam.xyz. Chúng tôi không chịu trách nhiệm nếu một bên thứ 3 cố tình lấy thông tin của người dùng bất hợp pháp mà chưa được sự cho phép của chúng tôi. Bên thứ 3 sẽ phải chịu hoàn toàn trách nhiệm trước pháp luật nếu vi phạm quyền sở hữu trí tuệ và xâm phạm tài sản của chúng tôi (bao gồm tất cả các nội dung trên website Timvieclam.xyz).
         </p>
         <p>Bất kỳ phản hồi nào bạn gửi đến cho chúng tôi sẽ trở thành tài sản của chúng tôi và chúng tôi có thể dùng phản hồi đó (chẳng hạn các câu chuyện thành công) cho các mục đích tiếp thị, hoặc liên hệ với bạn để có thêm thông tin.
         </p>
 
     <h5>III. Bạn có thể truy cập, cập nhật và xóa thông tin của bạn như thế nào?    </h5>
-        <p>Chúng tôi sẽ cung cấp cho bạn các phương tiện đảm bảo thông tin cá nhân của bạn là chính xác và cập nhật. Bạn có thể hiệu chỉnh hoặc xoá hồ sơ của bạn bất cứ lúc nào khi bạn đăng nhập vào website MyWork.
+        <p>Chúng tôi sẽ cung cấp cho bạn các phương tiện đảm bảo thông tin cá nhân của bạn là chính xác và cập nhật. Bạn có thể hiệu chỉnh hoặc xoá hồ sơ của bạn bất cứ lúc nào khi bạn đăng nhập vào website Timvieclam.xyz.
         </p>
         
     </div>
