--- a/Front End/HuyNQ/Source/intro.html
+++ b/Front End/HuyNQ/Source/intro.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" href="plugin/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="plugin/fontawesome/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
-
-
 </head>
 <body>
 
@@ -51,7 +49,7 @@
   <div class="row row__intro-top">
     <div class="col-lg-6 col-sm-6 mt-5 title__intro-top">
       <h3>ĐỘI NGŨ NHÂN SỰ</h3>
-      <p>Bắt đầu từ một vài cá nhân tâm huyết với việc kết nối, tạo cơ hội việc làm cho hàng triệu người lao động, đến nay Tìm Việc Nhanh đã có đội ngũ hàng trăm nhân sự đang hỗ trợ nhiệt tình tới từng Nhà tuyển dụng, tới từng ứng viên.
+      <p>Bắt đầu từ một vài cá nhân tâm huyết với việc kết nối, tạo cơ hội việc làm cho hàng triệu người lao động, đến nay Timvieclam.xyz đã có đội ngũ hàng trăm nhân sự đang hỗ trợ nhiệt tình tới từng Nhà tuyển dụng, tới từng ứng viên.
       </p>
       <p>Giúp doanh nghiệp tuyển dụng nhanh chóng, ứng viên sớm tìm được công việc mơ ước chính là mục tiêu hoạt động của chúng tôi.
       </p>
@@ -64,7 +62,7 @@
 
   <div class="row row__intro-top">
     <div class="col-lg-6 col-sm-6">
-      <img src="https://www.timviecnhanh.com/asset/introduce/images/others/tvn_birthday.jpg" alt="">
+      <img src="https://www.timviecnhanh.com/asset/introduce/images/others/AnhSieuViet.jpg" alt="">
     </div>
     
     <div class="col-lg-6 col-sm-6 mt-5 title__intro-top">
@@ -360,48 +358,3 @@
 <script src="plugin/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="plugin/jquery/jquery-3.5.1.min.js"></script>
 <script src="js/main.js"></script>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-.body {
-  font-family: 'Lato', sans-serif;
-}
-.logo__intro-top img {
-  width: 30%;
-  margin-left: 35%;
-  margin-top: 5%;
-}
-.title__intro img {
-  border-radius: 3px;
-  width: 100%;
-}
-.title__intro-top p {
-  font-size: 18px;
-  margin-top: 1%;
-}
-.row__intro-top {
-  margin-top: 5%;
-}
-.row__intro-top p {
-  font-size: 17px;
-}
-.title__intro-top h3 {
-  text-align: center;
-  font-weight: bold;
-  color: rgb(3, 41, 90);
-}
-.row__intro-bottom {
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
-.title__intro-bottom h3 {
-  font-weight: bold;
-  color: rgb(3, 41, 90);
-}
-.title__intro-bottom p {
-  font-size: 17px;
-}
-.funfact__intro-icon img {
-  width: 30%;
-  float: left;
-}
-</style>
