--- a/Front End/HuyNQ/Source/use.html
+++ b/Front End/HuyNQ/Source/use.html
@@ -127,7 +127,7 @@
         <h6 class="text-uppercase mb-4 font-weight-bold text-white">VỀ CHÚNG TÔI</h6>
           <div class="text__info--title">
             <p>
-              <a href="#!">Về Timvieclam.xyz</a>
+              <a href="intro.html">Về Timvieclam.xyz</a>
             </p>
             <!-- <p>
               <a href="#!">Quy Chế</a>
@@ -318,7 +318,7 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> 
 </div>
 </body>
 </html>
