--- a/Front End/ThinhNQ/Source/job.html
+++ b/Front End/ThinhNQ/Source/job.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="https://cdn.worldvectorlogo.com/logos/bootstrap-4.svg" type="image/x-icon">
     <link rel="stylesheet" href="plugin/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="plugin/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/t_style.css">
 </head>
 
 <body>
@@ -1315,12 +1315,6 @@
     <script src="plugin/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
-<script>
-    $(document).ready(function () {
-        $('select').selectize({
-            sortField: 'text'
-        });
-    });
-</script>
+
 
 </html>
