--- a/Front End/HuyNQ/Source/index.html
+++ b/Front End/HuyNQ/Source/index.html
@@ -34,7 +34,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <div class="form-inline my-2 my-lg-0 navbar-nav font-weight-normal font-header">
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fas fa-blog mr-2 icon-menu"></i> GÓC NGHỀ NGHIỆP
+                                <a class="nav-link" href="job.html"><i class="fas fa-blog mr-2 icon-menu"></i> GÓC NGHỀ NGHIỆP
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -725,42 +725,42 @@
                 </p>
 
                 <!-- <hr class="mt-2 mb-5"> -->
-
-                <div class="row row-business--top">
-                    <div class="col-lg-2 col-md-4 col-sm-6">
-                        <a href="#lightbox"><img src="https://static.mservice.io/img/logo-momo.png" class="my-3" /></a>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6">
-                        <a href="#lightbox"><img
-                                src="https://brasol.vn/public/uploads/1521190718-brasol.vn-he-thong-nhan-dien-thuong-hieu-bitis-bestplus-vn-logo-bitis.jpg"
-                                class="my-3" /></a>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6">
-                        <a href="#lightbox"><img
-                                src="https://upload.wikimedia.org/wikipedia/vi/thumb/e/e8/Logo_Viettel.svg/1200px-Logo_Viettel.svg.png"
-                                class="my-3" /></a>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6">
-                        <a href="#lightbox"><img src="https://www.freepnglogos.com/uploads/samsung-logo-text-png-1.png"
-                                class="my-3" /></a>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6">
-                        <a href="#lightbox"><img
-                                src="https://upload.wikimedia.org/wikipedia/vi/thumb/8/80/FPT_New_Logo.png/1200px-FPT_New_Logo.png"
-                                class="my-3" /></a>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6">
-                        <a href="#lightbox"><img
-                                src="https://brasol.vn/public/ckeditor/uploads/thiet-ke-logo-tin-tuc/logo-tiki-png.png"
-                                class="my-3" /></a>
+                <div class="col-lg-12 col-sm-6">
+                    <div class="row row-business--top">
+                        <div class="col-lg-2">
+                            <a href="#lightbox"><img src="https://static.mservice.io/img/logo-momo.png" class="my-3" /></a>
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-6">
+                            <a href="#lightbox"><img
+                                    src="https://brasol.vn/public/uploads/1521190718-brasol.vn-he-thong-nhan-dien-thuong-hieu-bitis-bestplus-vn-logo-bitis.jpg"
+                                    class="my-3" /></a>
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-6">
+                            <a href="#lightbox"><img
+                                    src="https://upload.wikimedia.org/wikipedia/vi/thumb/e/e8/Logo_Viettel.svg/1200px-Logo_Viettel.svg.png"
+                                    class="my-3" /></a>
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-6">
+                            <a href="#lightbox"><img src="https://www.freepnglogos.com/uploads/samsung-logo-text-png-1.png"
+                                    class="my-3" /></a>
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-6">
+                            <a href="#lightbox"><img
+                                    src="https://upload.wikimedia.org/wikipedia/vi/thumb/8/80/FPT_New_Logo.png/1200px-FPT_New_Logo.png"
+                                    class="my-3" /></a>
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-6">
+                            <a href="#lightbox"><img
+                                    src="https://brasol.vn/public/ckeditor/uploads/thiet-ke-logo-tin-tuc/logo-tiki-png.png"
+                                    class="my-3" /></a>
+                        </div>
                     </div>
                 </div>
 
+
                 <div class="row row-business--between">
-                    <div class="col-lg-2 col-md-4 col-sm-6">
-                        <a href="#lightbox"><img
-                                src="https://upload.wikimedia.org/wikipedia/vi/thumb/8/80/FPT_New_Logo.png/1200px-FPT_New_Logo.png"
-                                class="my-3" /></a>
+                    <div class="col-lg-2 col-md-4">
+                        <a href="#lightbox"><img src="https://upload.wikimedia.org/wikipedia/vi/thumb/8/80/FPT_New_Logo.png/1200px-FPT_New_Logo.png" class="my-3" /></a>
                     </div>
                     <div class="col-lg-2 col-md-4 col-sm-6">
                         <a href="#lightbox"><img
